--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,10 +12,20 @@
   --font-mono: var(--font-geist-mono);
 }
 
+@theme {
+  --color-*: initial;
+  --color-gray: #f0f0f0;
+  --color-white: #ffffff;
+  --color-black: #000000;
+  --color-hero: #f2f0f1;
+  --color-card-image: #f0eeed;
+  --color-red: #ff3333;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffffff;
+    --foreground: #000000;
   }
 }
 
@@ -23,4 +33,13 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@keyframes shimmer {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
 }
